app/assets/stylesheets/components/_navbar.scss
.navbar-lewagon {
  z-index: 1;
  justify-content: space-between;
  height: 50px;
  color: rgb(95, 93, 93);
  box-shadow: 0 0 15px rgba(0,0,0,0.3);
  opacity: 95%;
  display: flex;
  padding: 0 16px;
  a {
    color: rgb(95, 93, 93);
  }
  a:hover {
    color: rgb(162, 158, 158);
  }
  li {
    list-style: none;
  }
  div:first-of-type {
    display: flex;
    li {
      margin: 0 4px;
    }
  }
}

.navbar-lewagon .navbar-collapse {
  flex-grow: 0;
}

.navbar-lewagon .navbar-brand img {
  width: 40px;
}

.nav-item .dropdown {
  border: 1px solid red;
}

.dropdown-menu {
  background-color: white;
}

#navbar-logo {
  font-size: 30px;
  color: #7D6DAD;
}

